tabs from daisyui

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/book-48.png" />
+		<!-- <link
+			href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"
+			rel="stylesheet"
+		/> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React Spring Books</title>
 	</head>
 	<body>
 		<div id="root"></div>
+		<!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script> -->
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
